--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.21.2",
     "googleapis": "^146.0.0",
     "luxon": "^3.5.0",
+    "node-cache": "^5.1.2",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
