--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "googleapis": "^146.0.0",
     "luxon": "^3.5.0",
     "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "react": "^19.0.0",
