--- a/src/backend/.env
+++ b/src/backend/.env
@@ -1,5 +1,14 @@
-PORT=3001
-FRONTEND_URL=http://localhost:5173
+# Local development settings
+# PORT=3001
+# FRONTEND_URL=http://localhost:5173
+
+# Production settings
+PORT=5005
+FRONTEND_URL=https://theborzz.netlify.app
+
+# Email Service Credentials
+EMAIL_USER=annoyedpigeon25@gmail.com
+EMAIL_PASSWORD=jzuo uacb tufi rfck
 
 # After deployment, change FRONTEND_URL to your Vercel URL
 # FRONTEND_URL=https://your-app-name.vercel.app
