--- a/src/frontend/.env
+++ b/src/frontend/.env
@@ -1,4 +1,5 @@
-VITE_API_URL=http://localhost:3001
+# Local development
+# VITE_API_URL=http://localhost:3001
 
-# After deployment, change this to your Railway backend URL
-# VITE_API_URL=https://your-railway-app-name.railway.app 
+# Production URL - Railway backend
+VITE_API_URL=https://barberbooking-production.up.railway.app 
