--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "postbuild": "cp _redirects dist/",
     "preview": "vite preview"
   },
   "dependencies": {
