--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
-# Email Configuration
-EMAIL_USER="annoyedpigeon25@gmail.com"
-EMAIL_PASSWORD="jzuo uacb tufi rfck"
+# This is a fallback .env file for the root directory
+# The actual environment variables should be set in Railway
 
-# Other environment variables
+# Production settings
 PORT=5005
+FRONTEND_URL=https://theborzz.netlify.app
+
+# Email Service Credentials
+EMAIL_USER=annoyedpigeon25@gmail.com
+EMAIL_PASSWORD=jzuo uacb tufi rfck
