--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,24 @@
+[build]
+  base = "/"
+  command = "cd src/frontend && npm install && npm run build"
+  publish = "src/frontend/dist"
+
+[build.environment]
+  NODE_VERSION = "16"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [[headers]]
   for = "*.css"
   [headers.values]
     Content-Type = "text/css"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    Cache-Control = "public, max-age=3600"
