--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.0",
-    "axios": "^1.3.4"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
@@ -24,4 +26,4 @@
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
   }
-} 
+}
